Added more clubs and brands

--- a/templates/index.html
+++ b/templates/index.html
@@ -143,9 +143,6 @@
 
 <section id="latest-collection" style="padding-top: 50px;">
   <div class="container">
-    <div class="section-header d-flex flex-wrap align-items-center justify-content-between">
-      <h2 class="section-title">Brands and Clubs from all over!</h2>            
-    </div>
     <div class="product-collection row">
       <div class="col-lg-7 col-md-12 left-content">
         <div class="collection-item">
@@ -200,19 +197,50 @@
   </div>
 </section>
 
-<section id="brand-collection" class="padding-medium bg-light-grey">
+<section id="brand-collection" class="padding-small bg-light-grey">
   <div class="container">
+    <div class="section-header d-flex flex-wrap align-items-center justify-content-between">
+      <h2 class="section-title">Brands and Clubs from all over!</h2>            
+    </div>
     <div class="d-flex flex-wrap justify-content-between">
-      <img src="{% static 'images/adidas.png' %}" alt="phone" class="brand-image">
-      <img src="{% static 'images/barcelona.png' %}" alt="phone" class="brand-image">
-      <img src="{% static 'images/chelsea.png' %}" alt="phone" class="brand-image">
-      <img src="{% static 'images/liverpool.png' %}" alt="phone" class="brand-image">
-      <img src="{% static 'images/mancity.png' %}" alt="phone" class="brand-image">
-      <img src="{% static 'images/manu.png' %}" alt="phone" class="brand-image">
-      <img src="{% static 'images/mancity.png' %}" alt="phone" class="brand-image">
-      <img src="{% static 'images/nike.png' %}" alt="phone" class="brand-image">
-      <img src="{% static 'images/madrid.png' %}" alt="phone" class="brand-image">
-
+      <div class="row">
+        <div class="col-md-2">
+          <img src="{% static 'images/adidas.png' %}" alt="phone" class="brand-image img-fluid">
+        </div>
+        <div class="col-md-2">
+          <img src="{% static 'images/barcelona.png' %}" alt="phone" class="brand-image">
+        </div>
+        <div class="col-md-2">
+          <img src="{% static 'images/chelsea.png' %}" alt="phone" class="brand-image">
+        </div>
+        <div class="col-md-2">
+          <img src="{% static 'images/liverpool.png' %}" alt="phone" class="brand-image">
+        </div>
+        <div class="col-md-2">
+          <img src="{% static 'images/mancity.png' %}" alt="phone" class="brand-image">
+        </div>
+        <div class="col-md-2">
+          <img src="{% static 'images/manu.png' %}" alt="phone" class="brand-image">
+        </div>
+        <div class="col-md-2">
+          <img src="{% static 'images/mancity.png' %}" alt="phone" class="brand-image">
+        </div>
+        <div class="col-md-2">
+          <img src="{% static 'images/nike.png' %}" alt="phone" class="brand-image">
+        </div>
+        <div class="col-md-2">
+          <img src="{% static 'images/madrid.png' %}" alt="phone" class="brand-image">
+        </div>
+        <div class="col-md-2">
+          <img src="{% static 'images/puma.png' %}" alt="phone" class="brand-image">
+        </div>
+        <div class="col-md-2">
+          <img src="{% static 'images/tottenham.png' %}" alt="phone" class="brand-image">
+        </div>
+        <div class="col-md-2">
+          <img src="{% static 'images/bayern.png' %}" alt="phone" class="brand-image">
+        </div>
+      </div>
     </div>
   </div>
 </section>
