Making Images Browsable

--- a/templates/index.html
+++ b/templates/index.html
@@ -226,19 +226,19 @@
           <img src="{% static 'images/mancity.png' %}" alt="phone" class="brand-image">
         </div>
         <div class="col-md-2">
-          <img src="{% static 'images/nike.png' %}" alt="phone" class="brand-image">
+          <a href="{% url 'search' %}"></a><img src="{% static 'images/nike.png' %}" alt="phone" class="brand-image">
         </div>
         <div class="col-md-2">
-          <img src="{% static 'images/madrid.png' %}" alt="phone" class="brand-image">
+          <a href="{% url 'search' %}?query=madrid"><img src="{% static 'images/madrid.png' %}" alt="phone" class="brand-image"></a>
         </div>
         <div class="col-md-2">
-          <img src="{% static 'images/puma.png' %}" alt="phone" class="brand-image">
+          <a href="{% url 'search' %}?query=puma"><img src="{% static 'images/puma.png' %}" alt="phone" class="brand-image"></a>
         </div>
         <div class="col-md-2">
-          <img src="{% static 'images/tottenham.png' %}" alt="phone" class="brand-image">
+          <a href="{% url 'search' %}?query=tottenham"><img src="{% static 'images/tottenham.png' %}" alt="phone" class="brand-image"></a>
         </div>
         <div class="col-md-2">
-          <img src="{% static 'images/bayern.png' %}" alt="phone" class="brand-image">
+          <a href="{% url 'search' %}?query=bayern"><img src="{% static 'images/bayern.png' %}" alt="phone" class="brand-image"></a>
         </div>
       </div>
     </div>
