--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -9,7 +9,7 @@
     {% if messages %}
       {% for message in messages %}
         <div class="rounded u-full-width p-3" style="border: 1.7px solid #7ea021;">
-          <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+          <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
           <p>{{message}}</p>
           <a href="{% url 'checkout' %}" class="btn btn-primary"><i class="bi bi-cart"></i> Continue Shopping</a>
         </div>
@@ -27,11 +27,11 @@
             <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{wish.item.price}}</b> <strike>NGN{{wish.item.initial_price}}</strike></p>
             <p style="color: #2D2D2D;">{{wish.item.kit_type}}({{wish.item.season}})</p>
             <hr>
-            <a href="{% url 'remove_from_wishlist' wish.item.pk %}" class="btn btn-primary"><i class="bi bi-trash"></i> Remove from wishlist</a> <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
+            <a href="{% url 'remove_from_wishlist' wish.item.pk %}" class="btn btn-primary"><i class="bi bi-trash"></i> Remove from wishlist</a> <a href="{% url 'item_details' wish.item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
           </div>
         </div>
       </div>
-      {% endfor %}        
+      {% endfor %}
     </div>
   </div>
 </section>
