--- a/templates/shipping_detail.html
+++ b/templates/shipping_detail.html
@@ -6,7 +6,7 @@
   <div class="container">
     <h2>Shipping Information</h2>
     <p>A general overview of your shipping information</p>
-    <a href="{% url 'shipping' %}" class="btn btn-outline-primary"><i class="bi bi-truck"></i> Add new shipping info</a>
+    <a href="{% url 'shipping' %}" class="btn btn-outline-primary mb-3"><i class="bi bi-truck"></i> Add new shipping info</a>
     {% if messages %}
     {% for message in messages %}
         <div class="rounded u-full-width p-3" style="border: 1.7px solid #7ea021;">
