Added Privacy Policy

--- a/templates/base.html
+++ b/templates/base.html
@@ -193,7 +193,7 @@
                     <a href="{% url 'contact' %}">Contact</a>
                   </li>
                   <li class="menu-item">
-                    <a href="{% url 'faq' %}">Privacy Policy</a>
+                    <a href="{% url 'faq' %}#privacy-policy">Privacy Policy</a>
                   </li>
                   <li class="menu-item">
                     <a href="{% url 'faq' %}">Returns & Refunds</a>
