--- a/templates/faq.html
+++ b/templates/faq.html
@@ -53,11 +53,76 @@
                   <li>Date of purchase</li>
                   <li>Order Reference</li>
                 </ul>
-                After this, it usually takes our team around <strong>five</strong> working days to process a refund request. 
+                After this, it usually takes our team around <strong>two-seven</strong> working days to process a refund request. 
               </div>
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="privacy-policy" id="privacy-policy">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2 class="section-title">Privacy Policy</h2>
+      </div>
+    </div>
+    <div class="">
+      <div class="col">
+        <p>Effective Date: 14th April, 2024</p>
+      
+        <h4>Introduction</h4>
+        <p>This privacy policy describes how Adika's Takes ("we," "us," or "our") collects, uses, and discloses your information when you use our website</p>
+      
+        <h4>Information We Collect</h4>
+      
+        <h5>Information You Provide</h5>
+        <p>We collect certain information you directly provide when you use our Site, such as:</p>
+        <ul>
+          <li>Name</li>
+          <li>Billing Address</li>
+          <li>Shipping Address</li>
+          <li>Email Address</li>
+          <li>Phone Number</li>
+        </ul>
+      
+        <h5>Information Collected Automatically</h5>
+        <p>We also collect certain information automatically when you visit our Site, such as:</p>
+        <ul>
+          <li>IP address</li>
+          <li>Browser type</li>
+          <li>Operating system</li>
+          <li>Referring URLs</li>
+          <li>Products you viewed or searched for</li>
+        </ul>
+      
+        <h4>How We Use Your Information</h4>
+        <p>We use the information we collect to:</p>
+        <ul>
+          <li>Process your orders and deliver your purchases</li>
+          <li>Provide customer service</li>
+          <li>Personalize your shopping experience</li>
+          <li>Send you marketing communications (with your consent)</li>
+          <li>Improve our Site</li>
+        </ul>
+      
+        <h4>Sharing Your Information</h4>
+        <p>We may share your information with third-party service providers who help us operate our business and the Site. These service providers are obligated to protect your information.</p>
+        <p>We may also disclose your information if required by law.</p>
+      
+        <h4>Your Choices</h4>
+        <p>You have the right to opt out of receiving marketing communications from us. You can unsubscribe by clicking the "unsubscribe" link in our emails or by contacting us.</p>
+      
+        <h4>Data Security</h4>
+        <p>We take reasonable steps to protect your information from unauthorized access, disclosure, alteration, or destruction. We will not, without your permission give your data to third party entities</p>
+      
+        <h4>Changes to This Privacy Policy</h4>
+        <p>We may update this privacy policy from time to time. We will notify you of any changes by posting the new privacy policy on the Site.</p>
+      
+        <h4>Contact Us</h4>
+        <p>If you have any questions about this privacy policy, please contact us at <a href="mailto:adikawebservices@gmail.com">adikawebservices@gmail.com</a></p>
       </div>
     </div>
   </div>
