--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -3122,7 +3122,7 @@ section.categories .category-content a{
 /* Add a close button */
 .closebtn {
   margin-left: 15px;
-  color: white;
+  color: black;
   font-weight: bold;
   float: right;
   font-size: 22px;
