--- a/templates/index.html
+++ b/templates/index.html
@@ -237,6 +237,9 @@
         <div class="col-md-2">
           <a href="{% url 'search' %}?query=bayern"><img src="{% static 'images/bayern.png' %}" alt="phone" class="brand-image"></a>
         </div>
+        <div class="col-md-2">
+          <a href="{% url 'search' %}?query=nigeria"><img src="{% static 'images/nigeria.png' %}" alt="phone" class="brand-image"></a>
+        </div>
       </div>
     </div>
   </div>
