--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -37,11 +37,6 @@ div[style*="margin: 16px 0;"] { margin: 0 !important; }
 </style>
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
 
-
-<div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: Open Sans, Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-For what reason would it be advisable for me to think about business content? That might be little bit risky to have crew member like them. 
-</div>
-
 <p>We've received your order and are currently processing it.</p>
 
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -160,6 +155,16 @@ For what reason would it be advisable for me to think about business content? Th
                                         <td align="left" valign="top" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px;">
                                             <p style="font-weight: 800;">Estimated Delivery Date</p>
                                             <p>One week after order confirmation</p>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div style="display:inline-block; max-width:50%; min-width:240px; vertical-align:top; width:100%;">
+                                <table align="left" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:300px;">
+                                    <tr>
+                                        <td align="left" valign="top" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px;">
+                                            <p style="font-weight: 800;">Tracking ID</p>
+                                            <p>{{order.ref}}</p>
                                         </td>
                                     </tr>
                                 </table>
