Added Track Link to Thank you page

--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -9,7 +9,7 @@
           <h1 class="page-title">Thank You!</h1>
           <p>Our team will get back to you as soon as possible.</p>
           <p>In the meantime, you can go ahead and feed your eyes or even make a couple more purchases. </p>
-          <p>You can track your order from <a href="#">here</a></p>
+          <p>You can track your order from <a href="{% url 'track' %}">here</a></p>
           <a href="{% url 'shop' %}" class="btn btn-primary"><i class="bi bi-shopping-cart"></i> Continue Shopping</a>
         </div>
       </div>
