Fixed class typo in tracking page

--- a/templates/track-results.html
+++ b/templates/track-results.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 
-<section id="tracking" class="padding-small">
-    <div class="conatiner">
+<section id="tracking" class="faqs padding-small">
+    <div class="container">
         <div class="row">
             <h2>Order Status - {{item.status}}</h2>
         </div>
